--- a/client/public/index.html
+++ b/client/public/index.html
@@ -20,8 +20,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-  <title>React App</title>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/chess.js/0.10.2/chess.js"></script>
+  <title>Chess Nuts</title>
 </head>
 
 <body>
